crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__string_with_kind.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Other,
        range: 0..1,
    },
    SimpleToken {
        kind: Bogus,
        range: 1..6,
    },
]
