crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__tokenize_comma.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Comma,
        range: 0..1,
    },
    SimpleToken {
        kind: Comma,
        range: 1..2,
    },
    SimpleToken {
        kind: Comma,
        range: 2..3,
    },
    SimpleToken {
        kind: Comma,
        range: 3..4,
    },
]
