crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__tokenize_multichar.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: If,
        range: 0..2,
    },
    SimpleToken {
        kind: Whitespace,
        range: 2..3,
    },
    SimpleToken {
        kind: In,
        range: 3..5,
    },
    SimpleToken {
        kind: Whitespace,
        range: 5..6,
    },
    SimpleToken {
        kind: Else,
        range: 6..10,
    },
    SimpleToken {
        kind: Whitespace,
        range: 10..11,
    },
    SimpleToken {
        kind: Match,
        range: 11..16,
    },
]
