crates/ruff_python_trivia/src/snapshots/ruff_python_trivia__tokenizer__tests__tokenize_not_eq.snap
---
source: crates/ruff_python_trivia/src/tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: NotEqual,
        range: 0..2,
    },
    SimpleToken {
        kind: Equals,
        range: 2..3,
    },
]
